objects/AcctSeed__Time_Card_Day__c.object
<CustomObject>
    <description>Used to document the hours expended by an employee on a given day for a given project and project task. Time card days aggregate to a specific time card line.</description>
    <fields>
        <fullName>AcctSeed__Billing_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Line</label>
        <referenceTo>AcctSeed__Billing_Line__c</referenceTo>
        <relationshipLabel>Time Card Days</relationshipLabel>
        <relationshipName>Time_Card_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <formula>AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Employee__r.FirstName &amp; &quot; &quot; &amp;  AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Employee__r.LastName</formula>
        <inlineHelpText>Formula Field to display parent Time Card. Used for Reporting.</inlineHelpText>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Internal_Comment__c</fullName>
        <inlineHelpText>Used to record comments for internal communication within your organization. These comments are not seen by customers.</inlineHelpText>
        <label>Internal Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Invoice_Comment__c</fullName>
        <label>Invoice Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Parent_Status__c</fullName>
        <formula>TEXT(AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Line__c</fullName>
        <label>Time Card Line</label>
        <referenceTo>AcctSeed__Time_Card_Line__c</referenceTo>
        <relationshipLabel>Time Card Days</relationshipLabel>
        <relationshipName>Time_Card_Days</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Period__c</fullName>
        <formula>AcctSeed__Time_Card_Line__r.AcctSeed__Time_Card__r.AcctSeed__Time_Card_Period__r.Name</formula>
        <label>Time Card Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Utilization_Category__c</fullName>
        <formula>Text(AcctSeed__Time_Card_Line__r.AcctSeed__Project_Task__r.AcctSeed__Utilization_Category__c)</formula>
        <label>Utilization Category</label>
        <type>Text</type>
    </fields>
    <label>Time Card Day</label>
    <nameField>
        <displayFormat>TCD-{00000}</displayFormat>
        <label>Time Card Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Card Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Hours_Cannot_Be_Less_Than_Zero</fullName>
        <active>true</active>
        <description>The hours field cannot be a negative number</description>
        <errorConditionFormula>AcctSeed__Hours__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Hours__c</errorDisplayField>
        <errorMessage>You cannot specify a negative number for hours.</errorMessage>
    </validationRules>
</CustomObject>